lib/src/pq/generated_bindings_pq.dart


  int lo_read(
    ffi.Pointer<PGconn> conn,
    int fd,
    ffi.Pointer<ffi.Char> buf,
    int len,
  ) {
    return _lo_read(
      conn,
      fd,
      buf,
      len,
    );
  }

  late final _lo_readPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGconn>, ffi.Int, ffi.Pointer<ffi.Char>,
              ffi.Size)>>('lo_read');
  late final _lo_read = _lo_readPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, int, ffi.Pointer<ffi.Char>, int)>();

  int lo_write(
    ffi.Pointer<PGconn> conn,
    int fd,
    ffi.Pointer<ffi.Char> buf,
    int len,
  ) {
    return _lo_write(
      conn,
      fd,
      buf,
      len,
    );
  }

  late final _lo_writePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGconn>, ffi.Int, ffi.Pointer<ffi.Char>,
              ffi.Size)>>('lo_write');
  late final _lo_write = _lo_writePtr.asFunction<
      int Function(ffi.Pointer<PGconn>, int, ffi.Pointer<ffi.Char>, int)>();

  int lo_lseek(
    ffi.Pointer<PGconn> conn,
    int fd,
    int offset,
    int whence,
  ) {
    return _lo_lseek(
      conn,
      fd,
      offset,
      whence,
    );
  }

  late final _lo_lseekPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<PGconn>, ffi.Int, ffi.Int, ffi.Int)>>('lo_lseek');
  late final _lo_lseek = _lo_lseekPtr
      .asFunction<int Function(ffi.Pointer<PGconn>, int, int, int)>();

  int lo_lseek64(
    ffi.Pointer<PGconn> conn,
    int fd,
    int offset,
    int whence,
  ) {
    return _lo_lseek64(
      conn,
      fd,
      offset,
      whence,
    );
  }

  late final _lo_lseek64Ptr = _lookup<
      ffi.NativeFunction<
          pg_int64 Function(
              ffi.Pointer<PGconn>, ffi.Int, pg_int64, ffi.Int)>>('lo_lseek64');
  late final _lo_lseek64 = _lo_lseek64Ptr
      .asFunction<int Function(ffi.Pointer<PGconn>, int, int, int)>();

  int lo_creat(
    ffi.Pointer<PGconn> conn,
    int mode,
  ) {
    return _lo_creat(
      conn,
      mode,
    );
  }

  late final _lo_creatPtr =
      _lookup<ffi.NativeFunction<Oid Function(ffi.Pointer<PGconn>, ffi.Int)>>(
          'lo_creat');
  late final _lo_creat =
      _lo_creatPtr.asFunction<int Function(ffi.Pointer<PGconn>, int)>();

  int lo_create(
    ffi.Pointer<PGconn> conn,
    int lobjId,
  ) {
    return _lo_create(
      conn,
      lobjId,
    );
  }

  late final _lo_createPtr =
      _lookup<ffi.NativeFunction<Oid Function(ffi.Pointer<PGconn>, Oid)>>(
          'lo_create');
  late final _lo_create =
      _lo_createPtr.asFunction<int Function(ffi.Pointer<PGconn>, int)>();

  int lo_tell(
    ffi.Pointer<PGconn> conn,
    int fd,
  ) {
    return _lo_tell(
      conn,
      fd,
    );
  }

  late final _lo_tellPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>, ffi.Int)>>(
      'lo_tell');
  late final _lo_tell =
      _lo_tellPtr.asFunction<int Function(ffi.Pointer<PGconn>, int)>();

  int lo_tell64(
    ffi.Pointer<PGconn> conn,
    int fd,
  ) {
    return _lo_tell64(
      conn,
      fd,
    );
  }

  late final _lo_tell64Ptr = _lookup<
          ffi.NativeFunction<pg_int64 Function(ffi.Pointer<PGconn>, ffi.Int)>>(
      'lo_tell64');
  late final _lo_tell64 =
      _lo_tell64Ptr.asFunction<int Function(ffi.Pointer<PGconn>, int)>();

  int lo_truncate(
    ffi.Pointer<PGconn> conn,
    int fd,
    int len,
  ) {
    return _lo_truncate(
      conn,
      fd,
      len,
    );
  }

  late final _lo_truncatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<PGconn>, ffi.Int, ffi.Size)>>('lo_truncate');
  late final _lo_truncate =
      _lo_truncatePtr.asFunction<int Function(ffi.Pointer<PGconn>, int, int)>();

  int lo_truncate64(
    ffi.Pointer<PGconn> conn,
    int fd,
    int len,
  ) {
    return _lo_truncate64(
      conn,
      fd,
      len,
    );
  }

  late final _lo_truncate64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<PGconn>, ffi.Int, pg_int64)>>('lo_truncate64');
  late final _lo_truncate64 = _lo_truncate64Ptr
      .asFunction<int Function(ffi.Pointer<PGconn>, int, int)>();

  int lo_unlink(
    ffi.Pointer<PGconn> conn,
    int lobjId,
  ) {
    return _lo_unlink(
      conn,
      lobjId,
    );
  }

  late final _lo_unlinkPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>, Oid)>>(
          'lo_unlink');
  late final _lo_unlink =
      _lo_unlinkPtr.asFunction<int Function(ffi.Pointer<PGconn>, int)>();

  int lo_import(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _lo_import(
      conn,
      filename,
    );
  }

  late final _lo_importPtr = _lookup<
      ffi.NativeFunction<
          Oid Function(
              ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>>('lo_import');
  late final _lo_import = _lo_importPtr
      .asFunction<int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  int lo_import_with_oid(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> filename,
    int lobjId,
  ) {
    return _lo_import_with_oid(
      conn,
      filename,
      lobjId,
    );
  }

  late final _lo_import_with_oidPtr = _lookup<
      ffi.NativeFunction<
          Oid Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>,
              Oid)>>('lo_import_with_oid');
  late final _lo_import_with_oid = _lo_import_with_oidPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>, int)>();

  int lo_export(
    ffi.Pointer<PGconn> conn,
    int lobjId,
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _lo_export(
      conn,
      lobjId,
      filename,
    );
  }

  late final _lo_exportPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<PGconn>, Oid, ffi.Pointer<ffi.Char>)>>('lo_export');
  late final _lo_export = _lo_exportPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, int, ffi.Pointer<ffi.Char>)>();

  int PQlibVersion() {
    return _PQlibVersion();
  }

  late final _PQlibVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('PQlibVersion');
  late final _PQlibVersion = _PQlibVersionPtr.asFunction<int Function()>();

  int PQmblen(
    ffi.Pointer<ffi.Char> s,
    int encoding,
  ) {
    return _PQmblen(
      s,
      encoding,
    );
  }

  late final _PQmblenPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>>(
      'PQmblen');
  late final _PQmblen =
      _PQmblenPtr.asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  int PQmblenBounded(
    ffi.Pointer<ffi.Char> s,
    int encoding,
  ) {
    return _PQmblenBounded(
      s,
      encoding,
    );
  }

  late final _PQmblenBoundedPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>>(
      'PQmblenBounded');
  late final _PQmblenBounded =
      _PQmblenBoundedPtr.asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  int PQdsplen(
    ffi.Pointer<ffi.Char> s,
    int encoding,
  ) {
    return _PQdsplen(
      s,
      encoding,
    );
  }

  late final _PQdsplenPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>>(
      'PQdsplen');
  late final _PQdsplen =
      _PQdsplenPtr.asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  int PQenv2encoding() {
    return _PQenv2encoding();
  }

  late final _PQenv2encodingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('PQenv2encoding');
  late final _PQenv2encoding = _PQenv2encodingPtr.asFunction<int Function()>();

  ffi.Pointer<ffi.Char> PQencryptPassword(
    ffi.Pointer<ffi.Char> passwd,
    ffi.Pointer<ffi.Char> user,
  ) {
    return _PQencryptPassword(
      passwd,
      user,
    );
  }

  late final _PQencryptPasswordPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('PQencryptPassword');
  late final _PQencryptPassword = _PQencryptPasswordPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> PQencryptPasswordConn(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> passwd,
    ffi.Pointer<ffi.Char> user,
    ffi.Pointer<ffi.Char> algorithm,
  ) {
    return _PQencryptPasswordConn(
      conn,
      passwd,
      user,
      algorithm,
    );
  }

  late final _PQencryptPasswordConnPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('PQencryptPasswordConn');
  late final _PQencryptPasswordConn = _PQencryptPasswordConnPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<PGresult> PQchangePassword(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> user,
    ffi.Pointer<ffi.Char> passwd,
  ) {
    return _PQchangePassword(
      conn,
      user,
      passwd,
    );
  }

  late final _PQchangePasswordPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGresult> Function(
              ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('PQchangePassword');
  late final _PQchangePassword = _PQchangePasswordPtr.asFunction<
      ffi.Pointer<PGresult> Function(
          ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int pg_char_to_encoding(
    ffi.Pointer<ffi.Char> name,
  ) {
    return _pg_char_to_encoding(
      name,
    );
  }

  late final _pg_char_to_encodingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'pg_char_to_encoding');
  late final _pg_char_to_encoding =
      _pg_char_to_encodingPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> pg_encoding_to_char(
    int encoding,
  ) {
    return _pg_encoding_to_char(
      encoding,
    );
  }

  late final _pg_encoding_to_charPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int)>>(
          'pg_encoding_to_char');
  late final _pg_encoding_to_char =
      _pg_encoding_to_charPtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  int pg_valid_server_encoding_id(
    int encoding,
  ) {
    return _pg_valid_server_encoding_id(
      encoding,
    );
  }

  late final _pg_valid_server_encoding_idPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'pg_valid_server_encoding_id');
  late final _pg_valid_server_encoding_id =
      _pg_valid_server_encoding_idPtr.asFunction<int Function(int)>();

  PQsslKeyPassHook_OpenSSL_type PQgetSSLKeyPassHook_OpenSSL() {
    return _PQgetSSLKeyPassHook_OpenSSL();
  }

  late final _PQgetSSLKeyPassHook_OpenSSLPtr =
      _lookup<ffi.NativeFunction<PQsslKeyPassHook_OpenSSL_type Function()>>(
          'PQgetSSLKeyPassHook_OpenSSL');
  late final _PQgetSSLKeyPassHook_OpenSSL = _PQgetSSLKeyPassHook_OpenSSLPtr
      .asFunction<PQsslKeyPassHook_OpenSSL_type Function()>();

  void PQsetSSLKeyPassHook_OpenSSL(
    PQsslKeyPassHook_OpenSSL_type hook,
  ) {
    return _PQsetSSLKeyPassHook_OpenSSL(
      hook,
    );
  }

  late final _PQsetSSLKeyPassHook_OpenSSLPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(PQsslKeyPassHook_OpenSSL_type)>>(
      'PQsetSSLKeyPassHook_OpenSSL');
  late final _PQsetSSLKeyPassHook_OpenSSL = _PQsetSSLKeyPassHook_OpenSSLPtr
      .asFunction<void Function(PQsslKeyPassHook_OpenSSL_type)>();

  int PQdefaultSSLKeyPassHook_OpenSSL(
    ffi.Pointer<ffi.Char> buf,
    int size,
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQdefaultSSLKeyPassHook_OpenSSL(
      buf,
      size,
      conn,
    );
  }
